; ModuleID = '/home/carl/AnghaBench/freebsd/stand/sparc64/boot1/extr_boot1.c_ofw_exit.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/sparc64/boot1/extr_boot1.c_ofw_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"exit\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ofw_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ofw_exit() #0 {
  %1 = alloca [3 x i64], align 16
  %2 = getelementptr inbounds [3 x i64], [3 x i64]* %1, i64 0, i64 0
  store i64 ptrtoint ([5 x i8]* @.str to i64), i64* %2, align 16
  %3 = getelementptr inbounds [3 x i64], [3 x i64]* %1, i64 0, i64 1
  store i64 0, i64* %3, align 8
  %4 = getelementptr inbounds [3 x i64], [3 x i64]* %1, i64 0, i64 2
  store i64 0, i64* %4, align 16
  br label %5

5:                                                ; preds = %5, %0
  %6 = getelementptr inbounds [3 x i64], [3 x i64]* %1, i64 0, i64 0
  %7 = call i32 @ofw(i64* %6)
  br label %5
}

declare dso_local i32 @ofw(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
